fixed spacing on navbar

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -42,6 +42,8 @@ li input {
 input[type = 'text'] {font-size: 24px;}
 #searchbar {
     width: calc(100% - 443px);
+    position: relative;
+    top: 2px;
 }
 
 #racecar {
